--- a/styles/main.css
+++ b/styles/main.css
@@ -23,8 +23,9 @@ header {
     position: fixed;
     top: 0; 
     width: 100%;
-    height: 15vh;
+    height: auto;
     display: flex;
+    padding: 1em 0;
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
@@ -203,4 +204,16 @@ nav button {
 .hidden {
     visibility: hidden;
 }
+
+@media (max-width: 768px)
+{
+    .articlecontainer {
+        margin-top: 200px;
+    }
+
+    nav {
+        flex-direction: column;
+    }
+}
+
 
