--- a/styles/main.css
+++ b/styles/main.css
@@ -32,12 +32,14 @@ header {
     font-family: "Roboto Slab", serif;    
     color: var(--fontcolor);
     background-color: var(--headerbg);
+    z-index: 1;
 }
 
 header h1 {
     font-weight: 400;
     font-size: 40px;
     padding-left: 20px;
+   
 }
 
 nav {
@@ -60,7 +62,8 @@ nav button {
 .articlecontainer {
     position: relative;    
     height: 100%;  
-    margin-top: 120px;
+    margin-top: 100px;
+
 }
 
 #home {
@@ -73,7 +76,7 @@ nav button {
     align-items: center;
 
     width: 90%;
-    padding: 40px 5px;
+    padding: 20px 5px;
     border-top: 2px solid var(--fontcolor);
     border-bottom: 2px solid var(--fontcolor);
     color: var(--fontcolor);
@@ -86,16 +89,26 @@ nav button {
 }
 
 #home h2 {
-    margin: 20px;
+    margin: 5px;
     text-align: center;
     font-size: 35px;
     font-weight: 400;
 }
 
 #home p {
-    max-width: 700px;
-    margin: 20px;
+    max-width: 750px;
+    margin: 10px;
     font-size: 25px;
+    line-height: 1.5em;
+}
+
+.images {
+    display: flex;
+}
+
+.images img {
+    width: 75px;
+    margin: 1px 20px;
 }
 
 
